# QuantlabTest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/Quantlab/: CSVParser.hpp  CSVWriter.hpp  Calculator.hpp  Foo.hpp  Result.hpp  Trade.hpp
src/: CMakeLists.txt  CSVParser.cpp  CSVWriter.cpp  Calculator.cpp  Foo.cpp
tests/: CMakeLists.txt  CSVParserTests.cpp  CSVWriterTests.cpp  CalculatorTests.cpp  FooTest.cpp
tests/sample_files/: input.csv
